<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasswordActivity">

    <TextView
        android:id="@+id/reEnterPasswordLabelStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="196dp"
        android:text="@string/reEnterPasswordLabelStr"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reEnterPasswordTextStr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPasswordOneLabelStr" />

    <TextView
        android:id="@+id/enterPasswordOneLabelStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="267dp"
        android:text="@string/enterPasswordOneLabelStr"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCreatePasswordLabelStr"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enterPassswordTextStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="37dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/enterPassswordTextStr"
        app:layout_constraintBottom_toTopOf="@+id/reEnterPasswordTextStr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/enterPasswordOneLabelStr"
        app:layout_constraintTop_toBottomOf="@+id/welcomeCreatePasswordLabelStr"
        app:layout_constraintVertical_bias="0.432" />

    <EditText
        android:id="@+id/reEnterPasswordTextStr"
        android:layout_width="194dp"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:text="@string/reEnterPasswordTextStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reEnterPasswordLabelStr"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <TextView
        android:id="@+id/welcomeCreatePasswordLabelStr"
        android:layout_width="405dp"
        android:layout_height="128dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="258dp"
        android:text="@string/welcomeCreatePasswordLabelStr"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />
</androidx.constraintlayout.widget.ConstraintLayout>